@startuml
'https://plantuml.com/ie-diagram

entity authors {
    *id       : number <<generated>>
    full_name : text
}

entity books {
   *id       : number <<generated>>
   title     : text
   author_id : number <<FK>>
}

entity books_genres {
    *book_id  : number <<FK>>
    *genre_id : number <<FK>>
}

entity genres {
    *id  : number <<generated>>
    name : text
}

entity comments {
    *id  : number <<generated>>
    book_id  : number <<FK>>
    description : text
}

authors      ||--o{ books        : > авторы пишут книги
books        ||--o{ books_genres : > книга может быть написана \n в нескольких жанрах
books_genres ||--o{ genres       : < жанры извлекаются из справочника
books        ||--o{ comments       : > Книга имеет \n много комментариев

note right of books
Каждая книга
создана
одним автором
end note

@enduml
